add pca for call A/B compartment

--- a/test.ipynb
+++ b/test.ipynb
@@ -13,8 +13,8 @@
     "from functools import partial\n",
     "import pandas as pd\n",
     "\n",
-    "\n",
     "from CHARMio import parse_pairs, parse_gtf, write_pairs\n",
+    "from . import ref\n",
     "\n",
     "def cli(args)->int:\n",
     "    filename, gtf_file, out_name, thread = \\\n",
